<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etMainEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMainEmail"
        android:hint="@string/phone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etMainPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPhone"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMainPass"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPass"
        android:hint="@string/country"
        android:inputType="text"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnMainRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/etCountry" />


    <Button
        android:id="@+id/btnMainLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMainRegister"
        android:text="@string/login" />

</RelativeLayout>